--- a/themes/hydra/sass/_preference-select.scss
+++ b/themes/hydra/sass/_preference-select.scss
@@ -3,17 +3,21 @@
 	// copes with 5 preferences maximum
 
 	.preference-group .field {
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+		
+		position: relative;
 		float: left;
 		cursor: move; 
 		background: rgba(lighten($global-bg-color, 10%),0.5);
 		border: 0px solid lighten($global-bg-color, 12%);
 		border-left-width: 19px;
 		color: #fff;
-		font-weight: bold;
 		margin: 0;
 		margin-bottom: 1px;
 		padding: 5px 40px 5px 40px;
-		
+
 		@include respond(all-phones) {
 			border-left-width: 5px;
 		}
